force-app/main/default/objects/Contact/Donor_MailChimp__c.field-meta.xml
<CustomField>
    <fullName>Donor_MailChimp__c</fullName>
    <label>Donor MailChimp Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>