force-app/main/default/objects/Contact/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <label>LinkedIn URL</label>
    <type>Url</type>
    <description>LinkedIn profile URL extracted from source migration data or entered manually.</description>
</CustomField>