force-app/main/default/objects/Contact/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>